test/spec_vectors/memory64/ok/module_2.wat
(module (memory i64 1 256))