test/spec_vectors/memory64/fail/module_21.wat
(module (memory (import "M" "m") i64 281474976710657))